[project]
name = "seo_article_agent"
version = "1.0.0"
description = "MCP‑enabled multi‑agent pipeline that crafts human‑like, SEO‑optimized articles."
requires-python = ">=3.12"
readme = "README.md"
authors = [{name="als141", email="you@example.com"}]

dependencies = [
    "openai>=1.75.0",
    "openai-agents>=0.0.11",
    "tiktoken>=0.5.2",
    # Crawling / parsing
    "beautifulsoup4>=4.12.3",
    "readability-lxml>=0.8.1",
    "aiohttp>=3.9.5",
    "lxml[html-clean]>=5.3.2",
    "python-slugify>=8.0.1",
    # Text metrics
    "textstat>=0.7.5",        # Py3.12 compatible
    # Optional MCP dev‑server
    "fastmcp>=0.4.3",
]

[project.optional-dependencies]
dev = ["ruff", "pytest", "httpx"]

[project.scripts]
seo-agent = "seo_agent.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
sources = ["src"]

[tool.hatch.build.targets.wheel]
packages = ["src/seo_agent"]

[tool.hatch.build.targets.sdist]
packages = ["src/seo_agent"]